# mavros_navigator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  trajectory_analyst.py
data/: obstacles.txt  x_coords.txt  y_coords.txt
launch/: example_launch.py
mavros_navigator_interfaces/: CMakeLists.txt  package.xml
mavros_navigator_interfaces/action/: MoveTo.action
scripts/: data_logger.py  mavros_navigator.py  path_planner.py
