<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavros_navigator</name>
  <version>1.0.0</version>

  <description>"Mavros navigator"</description>

  <maintainer email="raphaelbonaccorsi@usp.br">Raphael M. C. Bonaccorsi</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>

  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <depend>mavros_navigator_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
