<?xml version="1.0"?>
<package format="3">
  <name>mavros_navigator_interfaces</name>
  <version>1.0.0</version>
  
  <description>Messages and service files for the mavros_navigator</description>

  <maintainer email="raphaelbonaccorsi@usp.br">Raphael M. C. Bonaccorsi</maintainer>
 
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>